updated results and requirements

--- a/code/JSONs/json_to_latex.ipynb
+++ b/code/JSONs/json_to_latex.ipynb
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -222,91 +222,91 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>CNN IEMOCAP</th>\n",
-       "      <td>0.33</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.13</td>\n",
+       "      <td>0.330</td>\n",
+       "      <td>0.022</td>\n",
+       "      <td>0.043</td>\n",
+       "      <td>0.043</td>\n",
+       "      <td>0.130</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CNN IMPROV</th>\n",
-       "      <td>0.37</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>0.10</td>\n",
+       "      <td>0.372</td>\n",
+       "      <td>-0.000</td>\n",
+       "      <td>-0.000</td>\n",
+       "      <td>-0.000</td>\n",
+       "      <td>0.103</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CNN MIXED</th>\n",
-       "      <td>0.20</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>0.12</td>\n",
+       "      <td>0.204</td>\n",
+       "      <td>0.032</td>\n",
+       "      <td>0.046</td>\n",
+       "      <td>0.046</td>\n",
+       "      <td>0.119</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LSTM IEMOCAP</th>\n",
-       "      <td>0.36</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>0.12</td>\n",
+       "      <td>0.359</td>\n",
+       "      <td>0.013</td>\n",
+       "      <td>-0.000</td>\n",
+       "      <td>-0.000</td>\n",
+       "      <td>0.118</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LSTM IMPROV</th>\n",
-       "      <td>0.34</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>0.11</td>\n",
+       "      <td>0.338</td>\n",
+       "      <td>-0.001</td>\n",
+       "      <td>-0.003</td>\n",
+       "      <td>-0.003</td>\n",
+       "      <td>0.113</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LSTM MIXED</th>\n",
-       "      <td>0.22</td>\n",
-       "      <td>-0.01</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>-0.00</td>\n",
-       "      <td>0.12</td>\n",
+       "      <td>0.215</td>\n",
+       "      <td>-0.008</td>\n",
+       "      <td>-0.002</td>\n",
+       "      <td>-0.002</td>\n",
+       "      <td>0.118</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MLP IEMOCAP</th>\n",
-       "      <td>0.43</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.01</td>\n",
+       "      <td>0.434</td>\n",
+       "      <td>0.042</td>\n",
+       "      <td>0.020</td>\n",
+       "      <td>0.020</td>\n",
+       "      <td>0.005</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MLP IEMOCAP</th>\n",
-       "      <td>0.43</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.01</td>\n",
+       "      <td>0.434</td>\n",
+       "      <td>0.042</td>\n",
+       "      <td>0.020</td>\n",
+       "      <td>0.020</td>\n",
+       "      <td>0.005</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MLP IMPROV</th>\n",
-       "      <td>0.42</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>-0.06</td>\n",
-       "      <td>-0.06</td>\n",
-       "      <td>0.01</td>\n",
+       "      <td>0.419</td>\n",
+       "      <td>0.035</td>\n",
+       "      <td>-0.058</td>\n",
+       "      <td>-0.058</td>\n",
+       "      <td>0.005</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MLP IMPROV</th>\n",
-       "      <td>0.42</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>-0.06</td>\n",
-       "      <td>-0.06</td>\n",
-       "      <td>0.01</td>\n",
+       "      <td>0.419</td>\n",
+       "      <td>0.035</td>\n",
+       "      <td>-0.058</td>\n",
+       "      <td>-0.058</td>\n",
+       "      <td>0.005</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MLP MIXED</th>\n",
-       "      <td>0.29</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>0.01</td>\n",
+       "      <td>0.294</td>\n",
+       "      <td>0.104</td>\n",
+       "      <td>0.050</td>\n",
+       "      <td>0.050</td>\n",
+       "      <td>0.005</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -314,33 +314,33 @@
       ],
       "text/plain": [
        "              Original Mean CCC  Tested Valence CCC  Tested Arousal CCC  \\\n",
-       "CNN IEMOCAP                0.33                0.02                0.04   \n",
-       "CNN IMPROV                 0.37               -0.00               -0.00   \n",
-       "CNN MIXED                  0.20                0.03                0.05   \n",
-       "LSTM IEMOCAP               0.36                0.01               -0.00   \n",
-       "LSTM IMPROV                0.34               -0.00               -0.00   \n",
-       "LSTM MIXED                 0.22               -0.01               -0.00   \n",
-       "MLP IEMOCAP                0.43                0.04                0.02   \n",
-       "MLP IEMOCAP                0.43                0.04                0.02   \n",
-       "MLP IMPROV                 0.42                0.04               -0.06   \n",
-       "MLP IMPROV                 0.42                0.04               -0.06   \n",
-       "MLP MIXED                  0.29                0.10                0.05   \n",
+       "CNN IEMOCAP               0.330               0.022               0.043   \n",
+       "CNN IMPROV                0.372              -0.000              -0.000   \n",
+       "CNN MIXED                 0.204               0.032               0.046   \n",
+       "LSTM IEMOCAP              0.359               0.013              -0.000   \n",
+       "LSTM IMPROV               0.338              -0.001              -0.003   \n",
+       "LSTM MIXED                0.215              -0.008              -0.002   \n",
+       "MLP IEMOCAP               0.434               0.042               0.020   \n",
+       "MLP IEMOCAP               0.434               0.042               0.020   \n",
+       "MLP IMPROV                0.419               0.035              -0.058   \n",
+       "MLP IMPROV                0.419               0.035              -0.058   \n",
+       "MLP MIXED                 0.294               0.104               0.050   \n",
        "\n",
        "              Tested Dominance CCC  Trained Mean CCC  \n",
-       "CNN IEMOCAP                   0.04              0.13  \n",
-       "CNN IMPROV                   -0.00              0.10  \n",
-       "CNN MIXED                     0.05              0.12  \n",
-       "LSTM IEMOCAP                 -0.00              0.12  \n",
-       "LSTM IMPROV                  -0.00              0.11  \n",
-       "LSTM MIXED                   -0.00              0.12  \n",
-       "MLP IEMOCAP                   0.02              0.01  \n",
-       "MLP IEMOCAP                   0.02              0.01  \n",
-       "MLP IMPROV                   -0.06              0.01  \n",
-       "MLP IMPROV                   -0.06              0.01  \n",
-       "MLP MIXED                     0.05              0.01  "
+       "CNN IEMOCAP                  0.043             0.130  \n",
+       "CNN IMPROV                  -0.000             0.103  \n",
+       "CNN MIXED                    0.046             0.119  \n",
+       "LSTM IEMOCAP                -0.000             0.118  \n",
+       "LSTM IMPROV                 -0.003             0.113  \n",
+       "LSTM MIXED                  -0.002             0.118  \n",
+       "MLP IEMOCAP                  0.020             0.005  \n",
+       "MLP IEMOCAP                  0.020             0.005  \n",
+       "MLP IMPROV                  -0.058             0.005  \n",
+       "MLP IMPROV                  -0.058             0.005  \n",
+       "MLP MIXED                    0.050             0.005  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,22 +350,29 @@
     "    with open(file) as f:\n",
     "        test_idx = int(jsons.index(file))\n",
     "        data = json.load(f)\n",
-    "    df.at[index[test_idx],\"Original Mean CCC\"] = round(data[\"First Eval\"],2)\n",
-    "    df.at[index[test_idx],\"Tested Valence CCC\"] = round(data[\"Second Eval whole\"][0],2)\n",
-    "    df.at[index[test_idx],\"Tested Arousal CCC\"] = round(data[\"Second Eval whole\"][1],2)\n",
-    "    df.at[index[test_idx],\"Tested Dominance CCC\"] = round(data[\"Second Eval whole\"][1],2)\n",
-    "    df.at[index[test_idx],\"Trained Mean CCC\"] = round(data[\"Third Eval\"],2)\n",
+    "    df.at[index[test_idx],\"Original Mean CCC\"] = round(data[\"First Eval\"],3)\n",
+    "    df.at[index[test_idx],\"Tested Valence CCC\"] = round(data[\"Second Eval whole\"][0],3)\n",
+    "    df.at[index[test_idx],\"Tested Arousal CCC\"] = round(data[\"Second Eval whole\"][1],3)\n",
+    "    df.at[index[test_idx],\"Tested Dominance CCC\"] = round(data[\"Second Eval whole\"][1],3)\n",
+    "    df.at[index[test_idx],\"Trained Mean CCC\"] = round(data[\"Third Eval\"],3)\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_latex(\"OverallResults.tex\")"
+    "df.to_latex(\"OverallResults3.tex\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
